--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
                     </ul>
                 </li>
+                <li><a href="#">Signin</a></li>
+                <li><a href="#">Signup</a></li>
             </ul>
             <!--End---Nav-->
             <!--Start---Search-->
