--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
                     </ul>
                 </li>
-                <li><a href="#">Signin</a></li>
-                <li><a href="#">Signup</a></li>
+                <li><a href="/login.html">Signin</a></li>
+                <li><a href="/Register.html">Signup</a></li>
             </ul>
             <!--End---Nav-->
             <!--Start---Search-->
@@ -43,7 +43,6 @@
                 <i class="icon-menu ti-menu"></i>
             </div>
         </div>
-
         <div id="slider">
             <div class="text-content">
                 <h2 class="text-heading">Los Angeles</h2>
